@@ -13,6 +13,7 @@ Also the Migration Guide (Japanese) might be informative:
 Ver.8 (in development)
 - [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
 - [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
+- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class.
 
 Ver.7 (March 20, 2021)
 - The synchronizing with clients is back without Pusher.
